Comments are now in a fixed height div, and with overflow handled by a scrollbar

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -22,6 +22,13 @@ label {
  display: flex;
  flex-direction: row;
 }
+.cardholder{
+ display: flex;
+ flex-direction: column;
+ width: 100%;
+ height: 100%
+ overflow-y: auto; /* Give scrollbar to comment section */
+}
 
 .card {
  display: flex;
@@ -47,7 +54,6 @@ label {
  border-radius: 2px;
  margin: 16px;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); 
- max-width: 75%;
 }
 .card > .field {
  width: 50%;
